# ppan

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  .itch.toml  AppImageBuilder.yml  BOM.txt  Cargo.toml  LICENSE  README.md  bacon.toml  build.rs  env.sh  justfile  ppan.icns  ppan.sh  rustfmt.toml
.cargo/: config.toml
itch/: linux.itch.toml  macos.itch.toml  win.itch.toml
src/: calc.rs  compute.rs  game.rs  input_handlers.rs  main.rs
