[package]
name = "ppan"
version = "0.0.1"
edition = "2021"
description = "pong, but a little more interesting."

[package.metadata.bundle]
identifier = "io.ppan"
category = "public.app-category.arcade-games"
resources = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cgmath = "0.18.0"
# derive-new = "0.5.9"
# ggez = "0.7.0"
# glam = "0.20.5"
# macroquad = "0.3"
# ggez-egui = "0.1.7"
# ggrs = "0.9"
# bytemuck = "1.9.1"
# socket2 = "0.4.7"
# lazy_static = "1.4.0"
# bincode = "1.3.3"
hostname = "0.3.1"
local-ip-address = "0.4.8"
serde = "1.0.145"
bevy = { version = "0.8.1" }
discord_game_sdk = { version = "1.0.1", optional = true }
bevy-inspector-egui = "0.13.0"
bevy_editor_pls = "0.1.1"
bevy_asset = "0.8.1"
leafwing-input-manager = "0.5.2"
[features]
discord = ["discord_game_sdk"]

# # marking as a lib crate so that we can run tests
# [lib]
# name = "input_handlers"
# path = "src/input_handlers.rs"
# doctest = true
