[package]
name = "ppan"
version = "0.0.1"
edition = "2021"
description = "pong, but a little more interesting."

[package.metadata.bundle]
identifier = "io.ppan"
category = "public.app-category.arcade-games"
resources = ["assets"]
icon = ["ppan.icns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# commented ones are still on bevy 0.10.1
hostname = "0.3.1"
local-ip-address = "0.5.3"
serde = "^1.0.145"
bevy = { version = "0.12.1" }
discord_game_sdk = { version = "1.0.1", optional = true }
bevy-inspector-egui = "0.21.0"
# bevy_editor_pls = "0.4.0"
bevy_asset = "0.12.1"
leafwing-input-manager = "0.11.2"
bevy_rapier2d = "0.23.0"
bevy_tweening = "0.9.0"
bevy_screen_diagnostics = "0.4.0"
# bevy_egui = "0.21.0"

[features]
discord = ["discord_game_sdk"]

# # marking as a lib crate so that we can run tests
# [lib]
# name = "input_handlers"
# path = "src/input_handlers.rs"
# doctest = true
